2018-02-03      3.4003  UK "protected" numbers should have false is_allocated();
                        Bugfix for countries that don't have area names (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/64);
                        Match libphonenumber's behaviour when countries have identical
                          validators for fixed_line and mobile (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/84);
                        Accept numbers in some more unusual national dialling formats (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/issues/77);
                        Recognise some more special rate numbers in Barbados and Bahamas (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/pull/86);
                        Add format_for_country method;
                        Data updates

2017-09-05      3.4002  Add new US and CA area codes;
                        UK data is now in a normal data file instead of a humungous binary
                          module;
                        Re-open the UK database in children after forking
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/72);
                        UK data can be slurped into memory for faster access (but slow startup);
                        Data updates

2017-07-02      3.4001  Added some nominally redundant dependencies (see
                          https://github.com/DrHyde/perl-modules-Number-Phone/pull/68);
                        UK "protected" numbers are now included;
                        Data updates

2017-03-14      3.4000  Changed Kosovo's placeholder country-code from KOS to XK;
                        +383 (Kosovo) is now a special-case for validation
                          (see https://github.com/DrHyde/perl-modules-Number-Phone/issues/66);
                        Data updates
